# progress-report-bot

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  reference.md  requirements.txt
progress_report_bot/: __init__.py  __main__.py  cli.py  config.py  models.py  snapshot_io.py
progress_report_bot/services/: __init__.py  analyzer.py  diff_analyzer.py  fetcher.py  git_factory.py  github_client.py  gitlab_client.py  local_git_client.py  meego_client.py  pusher.py  renderer.py  sync.py
progress_report_bot/templates/: diff.md.j2  lark_comment.md.j2  report.md.j2
scripts/: install-skill.ps1  install-skill.sh
